# NIMRS-Firmware

./: .gitignore  AGENTS.md  CMakeLists.txt  DESIGN.md  GEMINI.md  MIGRATION_PLAN.md  NIMRS-Firmware.ino  README.md  agent-setup.sh  build-command.nix  build-with-env.nix  common-libs.nix  components  config.example.h  dependencies.nix  extract_assets.py  flake-arduino.nix  flake.nix  managed_components  nimrs-pinout.h  partitions.csv  platformio.ini  sdkconfig.defaults  sound_assets.json  test-command.nix  treefmt.toml
docs/: API.md  PID_SIMULATOR.md  RECOVERY_TODO.md  architecture.md  audio-roadmap.md  build-with-nix.md  build-without-nix.md  drv8213-stall-guide.md  flashing.md  motor-roadmap.md  user-guide.md
main/: CMakeLists.txt  idf_component.yml  main.cpp
main/src/: AudioController.cpp  AudioController.h  BemfEstimator.cpp  BemfEstimator.h  BootLoopDetector.cpp  BootLoopDetector.h  ConnectivityManager.cpp  ConnectivityManager.h  CvRegistry.h  DccController.cpp  LightingController.h  Logger.cpp  Logger.h  MotorController.cpp  MotorController.h  MotorHal.cpp  MotorHal.h  MotorTask.cpp  MotorTask.h  RippleDetector.cpp  RippleDetector.h  SystemContext.h  WebAssets.h  nimrs-pinout.h  ota_overrides.c
nix/: arduino-components.nix  common-libs.nix  dependencies.nix  scripts.nix
src/: AudioController.cpp  AudioController.h  AudioUtils.h  BackupManager.cpp  BackupManager.h  BemfEstimator.cpp  BemfEstimator.h  BootLoopDetector.cpp  BootLoopDetector.h  ConnectivityManager.cpp  ConnectivityManager.h  CvRegistry.h  DccController.cpp  DccController.h  DspFilters.cpp  DspFilters.h  LameJs.h  LightingController.cpp  LightingController.h  Logger.cpp  Logger.h  MotorController.cpp  MotorController.h  MotorHal.cpp  MotorHal.h  MotorTask.cpp  MotorTask.h  RippleDetector.cpp  RippleDetector.h  SystemContext.h  WebAssets.h  nimrs-pinout.h
tests/: Makefile  bench_audio_check.cpp  benchmark_json.cpp  benchmark_logger.cpp  compile_audio_test.sh  test_AudioController.cpp  (+23 more)
(+69 files in other folders)
